@@ -19,8 +19,8 @@ package io.restassured.itest.java;
 import io.restassured.RestAssured;
 import io.restassured.builder.RequestSpecBuilder;
 import io.restassured.builder.ResponseSpecBuilder;
+import io.restassured.http.Cookies;
 import io.restassured.itest.java.support.WithJetty;
-import io.restassured.response.Cookies;
 import io.restassured.specification.RequestSpecification;
 import io.restassured.specification.ResponseSpecification;
 import org.apache.commons.io.output.WriterOutputStream;
