@@ -21,8 +21,7 @@ import io.restassured.config.HeaderConfig;
 import io.restassured.config.LogConfig;
 import io.restassured.config.RestAssuredConfig;
 import io.restassured.filter.log.RequestLoggingFilter;
-import io.restassured.http.ContentType;
-import io.restassured.http.Method;
+import io.restassured.http.*;
 import io.restassured.internal.MapCreator;
 import io.restassured.internal.http.CharsetExtractor;
 import io.restassured.internal.log.LogRepository;
@@ -36,10 +35,6 @@ import io.restassured.module.mockmvc.config.RestAssuredMockMvcConfig;
 import io.restassured.module.mockmvc.intercept.MockHttpServletRequestBuilderInterceptor;
 import io.restassured.module.mockmvc.response.MockMvcResponse;
 import io.restassured.module.mockmvc.specification.*;
-import io.restassured.response.Cookie;
-import io.restassured.response.Cookies;
-import io.restassured.response.Header;
-import io.restassured.response.Headers;
 import io.restassured.specification.ResponseSpecification;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MockMvcBuilder;
