@@ -19,13 +19,9 @@ package io.restassured.specification;
 import io.restassured.config.RestAssuredConfig;
 import io.restassured.config.SessionConfig;
 import io.restassured.filter.Filter;
-import io.restassured.http.ContentType;
+import io.restassured.http.*;
 import io.restassured.internal.mapper.ObjectMapperType;
 import io.restassured.mapper.ObjectMapper;
-import io.restassured.response.Cookie;
-import io.restassured.response.Cookies;
-import io.restassured.response.Header;
-import io.restassured.response.Headers;
 
 import java.io.File;
 import java.io.InputStream;
